[package]
name = "bevy_jornet"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for Jornet - a social game server"
categories = ["game-development"]
keywords = ["bevy", "social", "leaderboard", "score"]
exclude = ["assets/", "leaderboard.png"]
repository = "https://github.com/vleue/jornet/tree/main/bevy-jornet"
homepage = "https://jornet.vleue.com"
documentation = "https://docs.rs/bevy_jornet"

[dependencies.bevy]
version = "0.10"
default-features = false

[dependencies]
jornet = { path = "../jornet" }
uuid = { version = "1.1", features = ["v4", "serde"] }

[dev-dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
]

[dev-dependencies]
rand = "0.8"
