[package]
name = "jornet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.5", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "Request",
    "Window",
    "Response",
    "Headers",
    "RequestInit",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
